--- a/create_ds_for_sentiment_topic.ipynb
+++ b/create_ds_for_sentiment_topic.ipynb
@@ -176,6 +176,103 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>topic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>This book was the very first bookmobile book I...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>book</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>When I read the description for this book, I c...</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>book</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>I just had to edit this review. This book is a...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>book</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>I don't normally buy 'mystery' novels because ...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>book</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>This isn't the kind of book I normally read, a...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>book</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sentence id                                               text sentiment  \\\n",
+       "0            0  This book was the very first bookmobile book I...  positive   \n",
+       "1            1  When I read the description for this book, I c...  negative   \n",
+       "2            2  I just had to edit this review. This book is a...  positive   \n",
+       "3            3  I don't normally buy 'mystery' novels because ...  positive   \n",
+       "4            4  This isn't the kind of book I normally read, a...  positive   \n",
+       "\n",
+       "  topic  \n",
+       "0  book  \n",
+       "1  book  \n",
+       "2  book  \n",
+       "3  book  \n",
+       "4  book  "
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kindle_review_df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -377,8 +474,7 @@
     "# add sentence id \n",
     "rotten_review_df['sentence id'] = rotten_review_df.index\n",
     "# reorder the columns\n",
-    "rotten_review_df = rotten_review_df[['sentence id', 'text', 'sentiment', 'topic']]\n",
-    "\n"
+    "rotten_review_df = rotten_review_df[['sentence id', 'text', 'sentiment', 'topic']]"
    ]
   },
   {
@@ -389,6 +485,103 @@
    "source": [
     "# save new dataframe to csv file as original is too large\n",
     "rotten_review_df.to_csv('data/original/rotten_tomatoes_critic_reviews_preprocessed.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>topic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Whether audiences will get behind The Lightnin...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>movie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Harry Potter knockoffs don't come more transpa...</td>\n",
+       "      <td>negative</td>\n",
+       "      <td>movie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Percy Jackson isn't a great movie, but it's a ...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>movie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Crammed with dragons, set-destroying fights an...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>movie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>This action-packed fantasy adventure, based on...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>movie</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sentence id                                               text sentiment  \\\n",
+       "0            0  Whether audiences will get behind The Lightnin...  positive   \n",
+       "1            1  Harry Potter knockoffs don't come more transpa...  negative   \n",
+       "2            2  Percy Jackson isn't a great movie, but it's a ...  positive   \n",
+       "4            4  Crammed with dragons, set-destroying fights an...  positive   \n",
+       "5            5  This action-packed fantasy adventure, based on...  positive   \n",
+       "\n",
+       "   topic  \n",
+       "0  movie  \n",
+       "1  movie  \n",
+       "2  movie  \n",
+       "4  movie  \n",
+       "5  movie  "
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rotten_review_df.head()"
    ]
   },
   {
@@ -421,6 +614,318 @@
     "movie_df = rotten_review_df\n",
     "# TODO: check counts of each sentiment and make sure it is balanced esp. for positive and negative"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Restaurant Reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Restaurant</th>\n",
+       "      <th>Reviewer</th>\n",
+       "      <th>Review</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Metadata</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Pictures</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Beyond Flavours</td>\n",
+       "      <td>Rusha Chakraborty</td>\n",
+       "      <td>The ambience was good, food was quite good . h...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1 Review , 2 Followers</td>\n",
+       "      <td>5/25/2019 15:54</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Beyond Flavours</td>\n",
+       "      <td>Anusha Tirumalaneedi</td>\n",
+       "      <td>Ambience is too good for a pleasant evening. S...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3 Reviews , 2 Followers</td>\n",
+       "      <td>5/25/2019 14:20</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Beyond Flavours</td>\n",
+       "      <td>Ashok Shekhawat</td>\n",
+       "      <td>A must try.. great food great ambience. Thnx f...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2 Reviews , 3 Followers</td>\n",
+       "      <td>5/24/2019 22:54</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Beyond Flavours</td>\n",
+       "      <td>Swapnil Sarkar</td>\n",
+       "      <td>Soumen das and Arun was a great guy. Only beca...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1 Review , 1 Follower</td>\n",
+       "      <td>5/24/2019 22:11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Beyond Flavours</td>\n",
+       "      <td>Dileep</td>\n",
+       "      <td>Food is good.we ordered Kodi drumsticks and ba...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3 Reviews , 2 Followers</td>\n",
+       "      <td>5/24/2019 21:37</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Restaurant              Reviewer  \\\n",
+       "0  Beyond Flavours     Rusha Chakraborty   \n",
+       "1  Beyond Flavours  Anusha Tirumalaneedi   \n",
+       "2  Beyond Flavours       Ashok Shekhawat   \n",
+       "3  Beyond Flavours        Swapnil Sarkar   \n",
+       "4  Beyond Flavours                Dileep   \n",
+       "\n",
+       "                                              Review Rating  \\\n",
+       "0  The ambience was good, food was quite good . h...      5   \n",
+       "1  Ambience is too good for a pleasant evening. S...      5   \n",
+       "2  A must try.. great food great ambience. Thnx f...      5   \n",
+       "3  Soumen das and Arun was a great guy. Only beca...      5   \n",
+       "4  Food is good.we ordered Kodi drumsticks and ba...      5   \n",
+       "\n",
+       "                  Metadata             Time  Pictures  \n",
+       "0   1 Review , 2 Followers  5/25/2019 15:54         0  \n",
+       "1  3 Reviews , 2 Followers  5/25/2019 14:20         0  \n",
+       "2  2 Reviews , 3 Followers  5/24/2019 22:54         0  \n",
+       "3    1 Review , 1 Follower  5/24/2019 22:11         0  \n",
+       "4  3 Reviews , 2 Followers  5/24/2019 21:37         0  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "restaurant_review_df = pd.read_csv('data/original/restaurant_reviews.csv')\n",
+    "restaurant_review_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5       3832\n",
+       "4       2373\n",
+       "1       1735\n",
+       "3       1193\n",
+       "2        684\n",
+       "4.5       69\n",
+       "3.5       47\n",
+       "2.5       19\n",
+       "1.5        9\n",
+       "Like       1\n",
+       "Name: Rating, dtype: int64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop columns: 'Restaurant','Reviewer','Metadata', 'Time', 'Pictures'\n",
+    "restaurant_review_df.drop(['Restaurant','Reviewer','Metadata', 'Time', 'Pictures'], axis=1, inplace=True)\n",
+    "restaurant_review_df.Rating.value_counts()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>topic</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>The ambience was good, food was quite good . h...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>restaurant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Ambience is too good for a pleasant evening. S...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>restaurant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>A must try.. great food great ambience. Thnx f...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>restaurant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Soumen das and Arun was a great guy. Only beca...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>restaurant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Food is good.we ordered Kodi drumsticks and ba...</td>\n",
+       "      <td>positive</td>\n",
+       "      <td>restaurant</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sentence id                                               text sentiment  \\\n",
+       "0            0  The ambience was good, food was quite good . h...  positive   \n",
+       "1            1  Ambience is too good for a pleasant evening. S...  positive   \n",
+       "2            2  A must try.. great food great ambience. Thnx f...  positive   \n",
+       "3            3  Soumen das and Arun was a great guy. Only beca...  positive   \n",
+       "4            4  Food is good.we ordered Kodi drumsticks and ba...  positive   \n",
+       "\n",
+       "        topic  \n",
+       "0  restaurant  \n",
+       "1  restaurant  \n",
+       "2  restaurant  \n",
+       "3  restaurant  \n",
+       "4  restaurant  "
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop where Rating == 'Like'\n",
+    "restaurant_review_df = restaurant_review_df[restaurant_review_df['Rating'] != 'Like']\n",
+    "# if rating > 3, sentiment = positive ; if rating < 3, sentiment = negative ; if rating = 3, sentiment = neutral\n",
+    "# cast rating to float\n",
+    "restaurant_review_df['Rating'] = restaurant_review_df['Rating'].astype(float)\n",
+    "restaurant_review_df['sentiment'] = np.where(restaurant_review_df['Rating'] > 3, 'positive', np.where(restaurant_review_df['Rating'] < 3, 'negative', 'neutral'))\n",
+    "# rename the columns so that it will match the test set\n",
+    "restaurant_review_df.rename(columns={'Review': 'text'}, inplace=True)\n",
+    "# add a new column called 'topic' and set topic to restaurant\n",
+    "restaurant_review_df['topic'] = 'restaurant'\n",
+    "# add sentence id\n",
+    "restaurant_review_df['sentence id'] = restaurant_review_df.index\n",
+    "# reorder the columns\n",
+    "restaurant_review_df = restaurant_review_df[['sentence id', 'text', 'sentiment', 'topic']]\n",
+    "restaurant_review_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Might add new movie data eventually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Restaurant Topic Combined"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "restaurant_df = restaurant_review_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
