update ds generation

--- a/create_ds_for_sentiment_topic.ipynb
+++ b/create_ds_for_sentiment_topic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4                     Great Story!  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,12 +160,12 @@
     "kindle_review_df['topic'] = 'book'\n",
     "# set a sentiment column with following criteria\n",
     "# if rating > 3, sentiment = positive ; if rating < 3, sentiment = negative ; if rating = 3, sentiment = neutral\n",
-    "kindle_review_df['sentiment'] = np.where(kindle_review_df['rating'] > 3, 'positive', np.where(kindle_review_df['rating'] < 3, 'negative', 'neutral'))"
+    "kindle_review_df['sentiment'] = np.where(kindle_review_df['rating'] > 4, 'positive', np.where(kindle_review_df['rating'] < 2, 'negative', 'neutral'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "4  book  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,13 +295,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "neutral     7000\n",
+       "positive    3000\n",
+       "negative    2000\n",
+       "Name: sentiment, dtype: int64"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book_df = kindle_review_df\n",
+    "# TODO: check counts of each sentiment \n",
+    "book_df['sentiment'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "book_df = kindle_review_df\n",
+    "# remove NaN values\n",
+    "book_df.dropna(inplace=True)\n",
+    "# randomly select 1000 rows from each sentiment \n",
+    "positive_df = book_df[book_df['sentiment'] == 'positive'].sample(n=1000, random_state=1)\n",
+    "negative_df = book_df[book_df['sentiment'] == 'negative'].sample(n=1000, random_state=1)\n",
+    "neutral_df = book_df[book_df['sentiment'] == 'neutral'].sample(n=1000, random_state=1)\n",
     "\n",
-    "# TODO: check counts of each sentiment and make sure it is balanced esp. for positive and negative"
+    "# combine the 3 dataframes\n",
+    "book_df = pd.concat([positive_df, negative_df, neutral_df], ignore_index=True)"
    ]
   },
   {
@@ -313,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +461,7 @@
        "4  What's really lacking in The Lightning Thief i...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,18 +486,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cast review_score to float if possible for example it is '3/5' then it should be 3/5 = 0.6 \n",
-    "# first remove if review_score has /0 pattern in it\n",
-    "rotten_review_df = rotten_review_df[~rotten_review_df['review_score'].str.contains('/0')]\n",
+    "# cast review_score to float if possible \n",
+    "rotten_review_df = rotten_review_df[rotten_review_df['review_score'].str.contains('/10')]\n",
     "rotten_review_df['review_score'] = rotten_review_df['review_score'].apply(lambda x: float(x.split('/')[0])/float(x.split('/')[1]) if '/' in x else -1)\n",
     "# drop rows with review_score = -1\n",
     "rotten_review_df = rotten_review_df[rotten_review_df['review_score'] != -1]\n",
     "# if review_score > 0.5, sentiment = positive ; if review_score < 0.5, sentiment = negative ; if review_score = 0.5, sentiment = neutral\n",
-    "rotten_review_df['sentiment'] = np.where(rotten_review_df['review_score'] > 0.5, 'positive', np.where(rotten_review_df['review_score'] < 0.5, 'negative', 'neutral'))\n",
+    "rotten_review_df['sentiment'] = np.where(rotten_review_df['review_score'] > 0.6, 'positive', np.where(rotten_review_df['review_score'] < 0.4, 'negative', 'neutral'))\n",
     "# rename the columns so that it will match the test set\n",
     "rotten_review_df.rename(columns={'review_content': 'text'}, inplace=True)\n",
     "# add a new column called 'topic' and set topic to movie\n",
@@ -479,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,99 +519,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sentence id</th>\n",
-       "      <th>text</th>\n",
-       "      <th>sentiment</th>\n",
-       "      <th>topic</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Whether audiences will get behind The Lightnin...</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>movie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Harry Potter knockoffs don't come more transpa...</td>\n",
-       "      <td>negative</td>\n",
-       "      <td>movie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Percy Jackson isn't a great movie, but it's a ...</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>movie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Crammed with dragons, set-destroying fights an...</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>movie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>This action-packed fantasy adventure, based on...</td>\n",
-       "      <td>positive</td>\n",
-       "      <td>movie</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   sentence id                                               text sentiment  \\\n",
-       "0            0  Whether audiences will get behind The Lightnin...  positive   \n",
-       "1            1  Harry Potter knockoffs don't come more transpa...  negative   \n",
-       "2            2  Percy Jackson isn't a great movie, but it's a ...  positive   \n",
-       "4            4  Crammed with dragons, set-destroying fights an...  positive   \n",
-       "5            5  This action-packed fantasy adventure, based on...  positive   \n",
-       "\n",
-       "   topic  \n",
-       "0  movie  \n",
-       "1  movie  \n",
-       "2  movie  \n",
-       "4  movie  \n",
-       "5  movie  "
+       "sentiment\n",
+       "positive    42700\n",
+       "neutral     22725\n",
+       "negative     6013\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rotten_review_df.head()"
+    "rotten_review_df.value_counts('sentiment')"
    ]
   },
   {
@@ -593,10 +550,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rotten_review_df = pd.read_csv('data/original/rotten_tomatoes_critic_reviews_preprocessed.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -607,12 +566,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "positive    42700\n",
+       "neutral     22725\n",
+       "negative     6013\n",
+       "Name: sentiment, dtype: int64"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_df = rotten_review_df\n",
+    "# TODO: check counts of each sentiment and make sure it is balanced esp. for positive and negative\n",
+    "movie_df['sentiment'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "movie_df = rotten_review_df\n",
-    "# TODO: check counts of each sentiment and make sure it is balanced esp. for positive and negative"
+    "# remove NaN values\n",
+    "movie_df.dropna(inplace=True)\n",
+    "# randomly select 1000 rows from each sentiment \n",
+    "positive_df = movie_df[movie_df['sentiment'] == 'positive'].sample(n=1000, random_state=1)\n",
+    "negative_df = movie_df[movie_df['sentiment'] == 'negative'].sample(n=1000, random_state=1)\n",
+    "neutral_df = movie_df[movie_df['sentiment'] == 'neutral'].sample(n=1000, random_state=1)\n",
+    "\n",
+    "# combine the 3 dataframes\n",
+    "movie_df = pd.concat([positive_df, negative_df, neutral_df], ignore_index=True)"
    ]
   },
   {
@@ -624,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +726,7 @@
        "4  3 Reviews , 2 Followers  5/24/2019 21:37         0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +757,7 @@
        "Name: Rating, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +858,7 @@
        "4  restaurant  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +869,7 @@
     "# if rating > 3, sentiment = positive ; if rating < 3, sentiment = negative ; if rating = 3, sentiment = neutral\n",
     "# cast rating to float\n",
     "restaurant_review_df['Rating'] = restaurant_review_df['Rating'].astype(float)\n",
-    "restaurant_review_df['sentiment'] = np.where(restaurant_review_df['Rating'] > 3, 'positive', np.where(restaurant_review_df['Rating'] < 3, 'negative', 'neutral'))\n",
+    "restaurant_review_df['sentiment'] = np.where(restaurant_review_df['Rating'] > 4, 'positive', np.where(restaurant_review_df['Rating'] < 2, 'negative', 'neutral'))\n",
     "# rename the columns so that it will match the test set\n",
     "restaurant_review_df.rename(columns={'Review': 'text'}, inplace=True)\n",
     "# add a new column called 'topic' and set topic to restaurant\n",
@@ -913,39 +904,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "restaurant_df = restaurant_review_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "positive    444488\n",
-       "negative    135992\n",
-       "neutral      75728\n",
+       "neutral     4354\n",
+       "positive    3901\n",
+       "negative    1744\n",
        "Name: sentiment, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "total.sentiment.value_counts()"
+    "restaurant_df = restaurant_review_df\n",
+    "restaurant_df['sentiment'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove NaN values\n",
+    "restaurant_df.dropna(inplace=True)\n",
+    "# randomly select 1000 rows from each sentiment\n",
+    "positive_df = restaurant_df[restaurant_df['sentiment'] == 'positive'].sample(n=1000, random_state=1)\n",
+    "negative_df = restaurant_df[restaurant_df['sentiment'] == 'negative'].sample(n=1000, random_state=1)\n",
+    "neutral_df = restaurant_df[restaurant_df['sentiment'] == 'neutral'].sample(n=1000, random_state=1)\n",
+    "\n",
+    "# combine the 3 dataframes\n",
+    "restaurant_df = pd.concat([positive_df, negative_df, neutral_df], ignore_index=True)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +965,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "text-mining",
    "language": "python",
    "name": "python3"
   },
@@ -977,12 +979,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7cbd4214744612a7937c618210d0f20e0b9dece78a13efd0045e7dd74ec273d9"
+    "hash": "8382cef7e68f4f856d7dd605fa8d3bfcec002265d1363facf2e5b61f7575780d"
    }
   }
  },
