--- a/Topic.ipynb
+++ b/Topic.ipynb
@@ -27,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Omer\\AppData\\Local\\Temp\\ipykernel_17456\\4225091663.py:1: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
+      "/var/folders/9p/5zh9t8v14h9c19sssjwwlz940000gp/T/ipykernel_41291/4225091663.py:1: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version. Use on_bad_lines in the future.\n",
       "\n",
       "\n",
       "  df = pd.read_csv('data/original/total.csv', sep=\",\", error_bad_lines=False, encoding= \"unicode_escape\")\n"
@@ -58,12 +58,12 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\Omer\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     /Users/irem.demir/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\Omer\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     /Users/irem.demir/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
-      "C:\\Users\\Omer\\anaconda3\\lib\\site-packages\\sklearn\\feature_extraction\\text.py:396: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens [\"'d\", \"'ll\", \"'re\", \"'s\", \"'ve\", 'could', 'might', 'must', \"n't\", 'need', 'sha', 'wo', 'would'] not in stop_words.\n",
+      "/opt/anaconda3/envs/text-mining/lib/python3.8/site-packages/sklearn/feature_extraction/text.py:396: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens [\"'d\", \"'ll\", \"'re\", \"'s\", \"'ve\", 'could', 'might', 'must', \"n't\", 'need', 'sha', 'wo', 'would'] not in stop_words.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -175,9 +175,113 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6c4637b7",
+   "metadata": {},
+   "source": [
+    "# TRANSFORMER: ROBERTA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "37ae1967",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "train, dev = train_test_split(df, test_size=0.1, random_state=1, \n",
+    "                               stratify=df[['topic']])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c519647b-ea75-4a2b-bf2a-f2af5806afe8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define transformer based topic classifier for 3 topics\n",
+    "from simpletransformers.classification import ClassificationModel, ClassificationArgs\n",
+    "model_args = ClassificationArgs()\n",
+    "\n",
+    "model_args.overwrite_output_dir=True # overwrite existing saved models in the same directory\n",
+    "model_args.evaluate_during_training=True # to perform evaluation while training the model\n",
+    "# (eval data should be passed to the training method)\n",
+    "\n",
+    "model_args.num_train_epochs=10 # number of epochs\n",
+    "model_args.train_batch_size=32 # batch size\n",
+    "model_args.learning_rate=4e-6 # learning rate\n",
+    "model_args.max_seq_length=256 # maximum sequence length\n",
+    "# Note! Increasing max_seq_len may provide better performance, but training time will increase. \n",
+    "# For educational purposes, we set max_seq_len to 256.\n",
+    "\n",
+    "# Early stopping to combat overfitting: https://simpletransformers.ai/docs/tips-and-tricks/#using-early-stopping\n",
+    "model_args.use_early_stopping=True\n",
+    "model_args.early_stopping_delta=0.01 # \"The improvement over best_eval_loss necessary to count as a better checkpoint\"\n",
+    "model_args.early_stopping_metric='eval_loss'\n",
+    "model_args.early_stopping_metric_minimize=True\n",
+    "model_args.early_stopping_patience=2\n",
+    "model_args.evaluate_during_training_steps=32 # how often you want to run validation in terms of training steps (or batches)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5205de7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading pytorch_model.bin: 100%|██████████| 440M/440M [01:19<00:00, 5.57MB/s]\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "# Create a ClassificationModel\n",
+    "model = ClassificationModel('bert', 'bert-base-uncased', num_labels=3, args=model_args, use_cuda=False)\n",
+    "\n",
+    "# Fine-tune the model\n",
+    "model.train_model(train)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "result, model_outputs, wrong_predictions = model.eval_model(dev)\n",
+    "\n",
+    "# print the results\n",
+    "print(result)\n",
+    "\n",
+    "# classification report\n",
+    "print(classification_report(dev['topic'], model_outputs.argmax(axis=1)))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c519647b-ea75-4a2b-bf2a-f2af5806afe8",
+   "id": "6eaad3e2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -185,7 +289,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "text-mining",
    "language": "python",
    "name": "python3"
   },
@@ -199,7 +303,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "8382cef7e68f4f856d7dd605fa8d3bfcec002265d1363facf2e5b61f7575780d"
+   }
   }
  },
  "nbformat": 4,
